# enpm663_spring2025

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: docs.yaml
_sources/: index.rst.txt
docs/: conf.py
lecture3/av_demo_pkg/: CMakeLists.txt  package.xml
lecture3/av_demo_pkg/av_demo_pkg/: av_cameras_interface.py  av_sensors_interface.py
lecture3/av_demo_pkg/config/: params.yaml
lecture3/av_demo_pkg/launch/: params_demo1.launch.py  params_demo2.launch.py  params_demo3.launch.py
lecture3/av_demo_pkg/scripts/: av_actions_demo.py  av_cameras_demo.py  av_sensors_demo.py
lecture3/av_demo_pkg/src/: av_actions_demo.cpp  av_cameras_demo.cpp  av_sensors_demo.cpp
lecture3/launch_file_demo_pkg/: CMakeLists.txt  package.xml
lecture3/launch_file_demo_pkg/launch/: demo1.launch.py  demo2.launch.py  demo4.launch.py
lecture3/node_demo/: CMakeLists.txt  package.xml
lecture3/node_demo/scripts/: node_demo.py
lecture3/node_demo/src/: node_demo.cpp
lecture3/node_demo_pkg/: CMakeLists.txt  package.xml
lecture3/node_demo_pkg/include/node_demo_pkg/: node_demo_interface.hpp
lecture3/node_demo_pkg/node_demo_pkg/: node_demo_interface.py
lecture3/node_demo_pkg/scripts/: node_demo.py
lecture3/node_demo_pkg/src/: node_demo.cpp
lecture3/pub_demo_pkg/: CMakeLists.txt  package.xml
lecture3/pub_demo_pkg/include/pub_demo_pkg/: pub_demo_interface.hpp
lecture3/pub_demo_pkg/pub_demo_pkg/: pub_demo_interface.py
lecture3/pub_demo_pkg/scripts/: pub_demo.py
lecture3/pub_demo_pkg/src/: pub_demo.cpp
lecture3/sensor_demo_pkg/: CMakeLists.txt  package.xml
lecture3/sensor_demo_pkg/include/sensor_demo_pkg/: camera_demo_interface.hpp  lidar_demo_interface.hpp  processing_demo_interface.hpp  temperature_demo_interface.hpp
lecture3/sensor_demo_pkg/launch/: demo5.launch.py  demo6.launch.py  demo7.launch.py  demo8.launch.py
lecture3/sensor_demo_pkg/src/: camera_demo.cpp  lidar_demo.cpp  processing_demo.cpp  temperature_demo.cpp
lecture3/sub_demo_pkg/: CMakeLists.txt  package.xml
lecture3/sub_demo_pkg/include/sub_demo_pkg/: sub_demo_interface.hpp
lecture3/sub_demo_pkg/scripts/: sub_demo.py
lecture3/sub_demo_pkg/src/: sub_demo.cpp
lecture3/sub_demo_pkg/sub_demo_pkg/: sub_demo_interface.py
lecture5/enpm663_interfaces/: CMakeLists.txt  package.xml
lecture5/enpm663_interfaces/msg/: DayTimeInfo.msg
lecture5/enpm663_interfaces/srv/: HeatingSystem.srv
lecture5/executor_demo_pkg/: CMakeLists.txt  package.xml
lecture5/executor_demo_pkg/executor_demo_pkg/: executor_demo_interface.py
lecture5/executor_demo_pkg/script/: dual_mutually_exclusive.py  exclusive_reentrant.py  reentrant.py  singlethreaded_executor.py
lecture5/executor_demo_pkg/src/: singlethreaded_executor.cpp
lecture5/interface_demo_pkg/: CMakeLists.txt  package.xml
lecture5/interface_demo_pkg/include/interface_demo_pkg/: interface_demo_interface.hpp
lecture5/interface_demo_pkg/interface_demo_pkg/: interface_demo_interface.py
lecture5/interface_demo_pkg/script/: interface_demo.py
lecture5/interface_demo_pkg/src/: interface_demo.cpp
lecture5/lifecycle_node_demo_pkg/: CMakeLists.txt  package.xml
lecture5/lifecycle_node_demo_pkg/lifecycle_node_demo_pkg/: actuator_demo_interface.py  controller_demo_interface.py  nav_demo_interface.py  sensor_demo_interface.py  simple_lifecycle_demo_interface.py
lecture5/lifecycle_node_demo_pkg/script/: controller_demo.py  simple_lifecycle_demo.py
lecture5/service_demo_pkg/: CMakeLists.txt  package.xml
lecture5/service_demo_pkg/script/: heating_controller_direct.py  heating_controller_timer.py  service_start.py
lecture5/service_demo_pkg/service_demo_pkg/: heating_controller_direct_interface.py  heating_controller_timer_interface.py  service_demo_interface.py
lecture9/: .gitignore
lecture9/frame_demo/: CMakeLists.txt  package.xml
lecture9/frame_demo/frame_demo/: frame_demo_interface.py
lecture9/frame_demo/include/frame_demo/: broadcaster_demo.hpp  kdl_frame_demo.hpp
lecture9/frame_demo/src/: broadcaster_demo.cpp  kdl_frame_demo.cpp  main.cpp
lecture9/moveit_demo/: CMakeLists.txt  package.xml
lecture9/moveit_demo/config/: moveit_demo.yaml  rviz_config.rviz
lecture9/moveit_demo/include/: floor_robot_cpp_only.hpp
lecture9/moveit_demo/include/moveit_demo/: minimal_demo.hpp
lecture9/moveit_demo/launch/: controller_demo.launch.py  demo_cpp.launch.py  demo_cpp_python.launch.py  moveit_demo.launch.py
lecture9/moveit_demo/moveit_demo/: fancy_log.py  minimal_demo.py  moveit_demo_interface.py
lecture9/moveit_demo/script/: floor_robot_demo.py  minimal_demo.py
lecture9/moveit_demo/src/: floor_robot_cpp_only.cpp  floor_robot_cpp_python.cpp  minimal_demo.cpp
