<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>node_demo_pkg</name>
  <version>2.12.2024</version>
  <description>
    The node_demo package is designed as an introductory guide to developing ROS nodes and
    understanding core ROS concepts such as spinning, timers, publishers, and subscribers. This
    package provides a step-by-step demonstration of how to create a ROS 2 node, implement
    timer-based callbacks, publish messages to a topic, and subscribe to messages from a topic using
    rclcpp and rclpy.
  </description>
  <maintainer email="zeidk@umd.edu">zeid kootbally</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
