<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frame_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zeidk@umd.edu">zeid</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for both building and execution -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>ariac_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>python_orocos_kdl_vendor</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
