<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_demo</name>
  <version>0.0.0</version>
  <description>
    A demonstration package designed for teaching MoveIt 2 concepts in ROS 2.
    This package introduces students to motion planning, kinematics, collision checking, and robot trajectory execution using the MoveIt 2 framework.
  </description>
  <maintainer email="zeidk@umd.edu">zeid</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ariac_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>kdl_parser</depend>
  <depend>tf2_eigen</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>python_orocos_kdl_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
